<?xml version="1.0" encoding="utf-8"?>

    <android.support.design.widget.CoordinatorLayout
    android:id="@+id/bottles_coordinatorLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                 android:id="@+id/bottles_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                />

        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_bottle_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/add_bottle"
            android:scaleType="centerCrop"
            app:backgroundTint = "#ffffff"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_bottle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background = "@drawable/bottles_many"
            app:layout_behavior ="@string/appbar_scrolling_view_behavior"/>

    </android.support.design.widget.CoordinatorLayout>


