...
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="8dp">

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_note_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/note_add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_edit"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end" />
...
