<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name= "edit_In_BottleName" type="id">edit_In_BottleName</item>
    <item name= "popUtil_bottle" type="id">popUtil_bottle</item>
</resources>