<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingBottomSheetLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@android:color/background_light"
    android:paddingTop="20dp"
    app:behavior_hideable="true"
...
            android:textColor="#000000"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/drop_down"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/drop_down"/>
    </RelativeLayout>
...
